--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,73 @@
         </developer>
     </developers>
 
+    <properties>
+        <spring.version>4.1.1.RELEASE</spring.version>
+    </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
+
+    <dependencyManagement>
+
+        <dependencies>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+        </dependencies>
+
+    </dependencyManagement>
+
     <build>
+
         <plugins>
             <plugin>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.7.1</version>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.7.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
     </build>
+
+    <profiles>
+        <profile>
+            <id>special-profile</id>
+            <build>
+                <directory>special-target</directory>
+            </build>
+            <activation>
+                <property>
+                    <name>env.special</name>
+                </property>
+            </activation>
+        </profile>
+    </profiles>
 
 
 </project>
