--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,16 @@
       <version>${spring.version}</version>
     </dependency>
 
+<!--&lt;!&ndash;    https://www.baeldung.com/spring-postconstruct-predestroy &ndash;&gt;-->
+<!--Note that both @PostConstruct and @PreDestroy annotations are part of Java EE.-->
+<!--And since Java EE has been deprecated in Java 9 and removed in Java 11 we have to add an additional dependency-->
+<!--to use these annotations-->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
